# project_1

./: README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: auth.py  config.py  main.py  schemas.py
backend/tests/: test_auth.py
frontend/: README.md  index.html  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx  WebGLBackground.jsx
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
frontend/src/services/: auth.js
